# PLN-Consulta-de-perfiles

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  entregable.md  pyproject.toml  run_pipeline.sh
Grafo temporal de entidades peruanas (1)/: .thumbnail  Red de poder Peru.dc.html
annotation/: GUIA_ANOTACION.md  README.md  gold_template.csv
annotation/gold_entidades/: andina-v1.csv  roberto-sanchez.csv
annotation/gold_relaciones/: roberto-sanchez.csv
annotation/gold_relaciones_abiertas/: andina-v1.csv
annotation/tool/: README.md
data/: .gitignore  andina-v3s_progress.txt  andina_crawl.ckpt.json  corpus_andina_v1.manifest.json  corpus_andina_v2.manifest.json  corpus_andina_v3.manifest.json  figuras.json
data/menciones_corpus_andina_v1/: part-00000.parquet  part-00001.parquet  part-00002.parquet  part-00003.parquet  part-00004.parquet  part-00005.parquet  part-00006.parquet  part-00007.parquet  part-00008.parquet  part-00009.parquet  part-00010.parquet  part-00011.parquet  part-00012.parquet  part-00013.parquet  part-00014.parquet  part-00015.parquet  part-00016.parquet  part-00017.parquet  part-00018.parquet  part-00019.parquet  part-00020.parquet  part-00021.parquet  part-00022.parquet  part-00023.parquet  part-00024.parquet  part-00025.parquet  part-00026.parquet  part-00027.parquet  part-00028.parquet  part-00029.parquet  part-00030.parquet  part-00031.parquet  part-00032.parquet  part-00033.parquet  part-00034.parquet  part-00035.parquet  part-00036.parquet  part-00037.parquet  part-00038.parquet  part-00039.parquet  (+17 more)
data/salidas/: b0_lead.json  b1_extractive.json
data/salidas/andina-v1/: relation_type_clusters.csv
data/salidas/andina-v2/: relation_type_clusters.csv
data/salidas/humala/: ablacion.json  b0_lead.json  b1_extractive.json  sistema_rag.json
data/salidas/keiko/: ablacion.json  b0_lead.json  b1_extractive.json  sistema_rag.json
data/salidas/roberto-sanchez/: ablacion.json  b0_lead.json  b1_extractive.json  sistema_rag.json
eval/: align.py  entities.py  metrics.py  nli.py  openie.py  relation_typing.py  relations.py  run_experiment.py
reports/: datasheet.md  resultados-escala.md  resultados-relaciones.md  roadmap-paper.md
scripts/: acuerdo_anotadores.py  apply_relation_type_labels.py  backfill_cluster_id.py  build_corpus.py  build_events.py  build_open_graph.py  consolidar_corpus.py  crawl_andina.py  export_anotacion.py  export_corpus_spreadsheet.py  export_entidades_gold.py  export_openie_gold.py  export_red_temporal.py  export_relaciones_gold.py  export_relation_type_clusters.py  filtro_2025.py  generate_chart.py  generate_ego_network.py  generate_scalability_chart.py  inspect_graph.py  migrar_layout_figuras.py  muestra_v3.py  ner_corpus.py  precompute_figura.py  precompute_tema.py  reclasificar.py  registro_tema.py  run_generation.py  smoke_ingest.py  test_entities.py  test_eval.py  test_grafo_api.py  test_multifuente.py  test_relation_typing.py  test_relations.py
src/: assemble.py  figuras.py  manifiesto.py  schemas.py
src/app/: api.py  jobs.py  resumen.py  streamlit_app.py  visor_cronologia.py
src/app/web/: app.js  grafo.js  index.html  red_andina-v1.json  red_andina-v2.json  red_andina-v3s.json  red_temporal.html  style.css
src/generation/: _llm.py  ablacion.py  b0_lead.py  b1_extractive.py  base.py  sistema_rag.py
src/ingest/: _util.py  andina.py  gdelt.py  wikipedia.py
src/llm/: __init__.py  _config.py  anthropic.py  gemini.py  groq.py  openai.py  provider.py
src/pipeline/: _utils.py  cluster.py  embeddings.py  entities.py  entity_discovery.py  index.py  ner.py  preprocess.py  protagonism.py  relation_classifier.py  relation_typing.py  relations.py  salience.py  temporal.py
src/storage/: __init__.py  graph.py
