[project]
name = "timeline-gen"
version = "0.1.0"
description = "Generación fiel de líneas de tiempo de figuras políticas (T02 — Generación de lenguaje)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.13.4",

    # Ingesta / scraping.
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "requests>=2.34.2",

    # Almacenamiento y datos tabulares.
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "openpyxl>=3.1.5",

    # Backbone NLP.
    "spacy>=3.8.14",
    "sentence-transformers>=5.6.0",
    "scikit-learn>=1.9.0",
    "numpy>=2.5.0",
    "torch>=2.12.1",

    # Generacion LLM.
    "anthropic>=0.112.0",
    "python-dotenv>=1.2.2",

    # Producto.
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "streamlit>=1.58.0",

    # Evaluacion.
    "rouge-score>=0.1.2",
    # HeidelTime se gestiona aparte (Java + TreeTagger) - ver README / Docker.

    # Grafo de conocimiento y análisis de relaciones.
    "duckdb>=1.5.4",
    "networkx>=3.6.1",

    # NER transformer (producción) — modelo roberta-base-bne-capiter.
    # Nota: transformers 5.x disponible; API de pipeline NER compatible con 4.x y 5.x.
    "transformers>=5.12.1",

    # Proveedores LLM opcionales (solo instalar el que se use).
    "openai>=2.44.0",    # para RELATIONS_LLM_PROVIDER=openai|gemini (endpoint compatible)
    # groq>=1.5.0        # para RELATIONS_LLM_PROVIDER=groq
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
